<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppHair</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="comment_good">好评</string>
    <string name="comment_bad">差评</string>
    <string name="order_time">预定时间:</string>
	<string name="regist">注册</string>
	<string name="login">登录</string>
	<string name="pwd">密码</string>
	<string name="again_pwd">再次输入密码</string>
	<string name="name">用户名</string>
	
	
</resources>
