<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:ems="10" >

            <requestFocus />
        </EditText>


        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd"
            android:ems="10"
            android:inputType="textPassword" />
          <EditText
            android:id="@+id/login_pwd_again"
            android:layout_width="match_parent"	
            android:layout_height="wrap_content"
            android:hint="@string/again_pwd"
            android:ems="10"
            android:visibility="gone"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_login_or_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClick"
            android:text="@string/login" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
         >

        <TextView
            android:id="@+id/login_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:attr/textAppearanceMedium"
            android:onClick="OnClick"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:text="@string/regist" />
    </RelativeLayout>

</LinearLayout>